added normalize css file and linked it to main index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Andrew Christian Chang | Front-End Web Developer in Training</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="layout.css">
 </head>
 <body>
