--- a/index.html
+++ b/index.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Andrew Christian Chang | Front-End Web Developer in Training</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="layout.css">
-</head>
-<body>
-<header>
-    <h1>Andrew Christian Chang</h1>
-    <p>HOME</p>
-    <p>RESUME</p>
-    <p>PORTFOLIO</p>
-    <p>BLOG</p>
-    <p>CONTACT ME</p>
-</header>
-    <p>Howdy. I'm a Front-End Web Developer in training. I like geeky things. Weeee!</p>
 
-    <div class="row">
-            <div class="column"><p>Blah blah blah. Blah blah blah blah blah.</p></div>
-            <div class="column"><p>Testing. Blah blah blah blah blah blah blah.</p></div>
-          </div>
-    <div class="row">
-            <div class="column"><p>Blah blah blah. Blah blah blah blah blah.</p></div>
-            <div class="column"><p>Testing. Blah blah blah blah blah blah blah.</p></div>
-            <div class="column"><p>Testing. Blah blah blah blah blah blah blah.</p></div>
-          </div>
-<footer>
-    <form method="post" action="mailto:andrewchristianchang@gmail.com" >
-        <input type="submit" value="Send Email" /> 
-    </form>
+    <head>
+        <title>Andrew Christian Chang | Front-End Web Developer in Training</title>
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-</footer>
-</body>
+    <body>
+        <div="wrap">
+
+            <header>
+                <div class="main-header">
+                    <h1>Andrew Christian Chang</h1>
+                        <ul class="main-nav">
+                            <ul><a href="#">HOME</a></ul>
+                            <ul><a href="#">ABOUT</a></ul>
+                            <ul><a href="#">RESUME</a></ul>
+                            <ul><a href="#">BLOG</a></ul>
+                            <ul><a href="#">CONTACT</a></ul>
+                        </ul>
+                </div>
+            </header>
+
+            <p>Howdy. I'm a Front-End Web Developer in training. I like geeky things. Weeee!</p>
+
+            <div class="row">
+                <div class="column"><p>Blah blah blah. Blah blah blah blah blah.</p></div>
+                <div class="column"><p>Testing. Blah blah blah blah blah blah blah.</p></div>
+            </div>
+
+            <div class="row">
+                <div class="column"><p>Blah blah blah. Blah blah blah blah blah.</p></div>
+                <div class="column"><p>Testing. Blah blah blah blah blah blah blah.</p></div>
+                <div class="column"><p>Testing. Blah blah blah blah blah blah blah.</p></div>
+            </div>
+
+            <footer>
+                <div class="main-footer">
+                    <form method="post" action="mailto:andrewchristianchang@gmail.com" >
+                    <input type="submit" value="Send Email" /> 
+                    </form>
+                </div>
+            </footer>
+
+        </div>
+    </body>
 </html>
