made numerous layout changes and added social media links

--- a/index.html
+++ b/index.html
@@ -11,36 +11,33 @@
         <div="wrap">
 
             <header>
-                <div class="main-header">
-                    <h1>Andrew Christian Chang</h1>
-                        <ul class="main-nav">
-                            <ul><a href="#">HOME</a></ul>
-                            <ul><a href="#">ABOUT</a></ul>
-                            <ul><a href="#">RESUME</a></ul>
-                            <ul><a href="#">BLOG</a></ul>
-                            <ul><a href="#">CONTACT</a></ul>
-                        </ul>
+                <div class="container-fluid">
+                    <div class="main-header">
+                        <h1>andrew christian chang</h1>
+                            <ll class="main-nav">
+                                <ll><a href="#">HOME</a></ll>
+                                <ll><a href="#">MY STORY</a></ll>
+                                <ll><a href="#">RESUME</a></ll>
+                                <ll><a href="#">BLOG</a></ll>
+                                <ll><a href="#">CUTE ANIMALS FOR FUNSIES</a></ll>
+                                <ll><a href="#">CONTACT</a></ll>
+                            </ul>
+                    </div>
                 </div>
             </header>
-
-            <p>Howdy. I'm a Front-End Web Developer in training. I like geeky things. Weeee!</p>
-
-            <div class="row">
-                <div class="column"><p>Blah blah blah. Blah blah blah blah blah.</p></div>
-                <div class="column"><p>Testing. Blah blah blah blah blah blah blah.</p></div>
-            </div>
-
-            <div class="row">
-                <div class="column"><p>Blah blah blah. Blah blah blah blah blah.</p></div>
-                <div class="column"><p>Testing. Blah blah blah blah blah blah blah.</p></div>
-                <div class="column"><p>Testing. Blah blah blah blah blah blah blah.</p></div>
-            </div>
-
+                <div class="main-body">
+                    <p>Howdy. I'm a Front-End Web Developer in training. I like geeky things. Weeee!</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+               </div>
             <footer>
                 <div class="main-footer">
-                    <form method="post" action="mailto:andrewchristianchang@gmail.com" >
-                    <input type="submit" value="Send Email" /> 
-                    </form>
+                    <div class="social-media">
+                        <a href="https://www.facebook.com/profile.php?id=164002870" target="_blank" title="Facebook"><img src="images/Facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/andrewchristianchang/" target="_blank" title="Instagram"><img src="images/Instagram.png" alt="Instagram"></a>
+                        <a href="https://twitter.com/achristianchang" target="_blank" title="Twitter"><img src="images/Twitter.png" alt="Twitter"></a>
+                        <a href="https://www.linkedin.com//in/andrew-chang-00a157125" target="_blank" title="LinkedIn"><img src="images/Linkedin.png" alt="LinkedIn"></a>
+                        <a href="https://github.com/andrewchristianchang/" target="_blank" title="GitHub"><img src="images/Github.png" alt="GitHub"></a>
+                    </div>
                 </div>
             </footer>
 
