--- a/index.html
+++ b/index.html
@@ -98,22 +98,22 @@
                 <div class="col-md-8"> 
                     <ul class="nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="images/Facebook.png"></a>
+                            <a class="nav-link social-hover social-design" href="#"><img src="images/Facebook.png"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="images/Instagram.png"></a>
+                            <a class="nav-link social-hover social-design" href="#"><img src="images/Instagram.png"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="images/Twitter.png"></a>
+                            <a class="nav-link social-hover social-design" href="#"><img src="images/Twitter.png"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="images/Linkedin.png"></a>
+                            <a class="nav-link social-hover social-design" href="#"><img src="images/Linkedin.png"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="images/Github.png"></a>
+                            <a class="nav-link social-hover social-design" href="#"><img src="images/Github.png"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="images/Gmail.png"></a>
+                            <a class="nav-link social-hover social-design" href="#"><img src="images/Gmail.png"></a>
                         </li>
                     </ul>
                 </div>
